# vibe-hardware

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  skill_or_feature.md
.github/workflows/: ci.yml
assets/: README.md
docs/: README.md  architecture.md  awesome-firmware.md  getting-started.md  roadmap.md
docs/plans/: 2026-06-21-pager-cli-design.md
docs/references/: README.md  clone.sh  esp-box.md  esp-bsp.md  esp-iot-solution.md  voicestick.md  xiaozhi-esp32.md
examples/: README.md
examples/pager-buddy/: README.md  product.yaml
examples/pager-buddy/bridge/: README.md  analytics.py  ble_push.py  claude_pager_hook.py  install.sh  install_hooks.py  lib.sh  pager  pager_settings.py  pager_stub.py  preview_tones.py  protocol.yaml  run.sh  service.sh  smoke.sh
examples/pager-buddy/cad/: README.md  constraints.yaml
examples/pager-buddy/design/: README.md  app.js  data.js  design-language.md  index.html  live.js  styles.css
examples/pager-buddy/firmware/: .gitignore  CMakeLists.txt  README.md  flash.sh  idf.sh  partitions_ota.csv  sdkconfig.defaults
examples/pager-buddy/firmware/sim/: .gitignore  CMakeLists.txt  README.md  lv_conf.h  shoot.sh  sim_main.c
examples/pager-buddy/pcb/: README.md  pinmap.yaml
skills/text-to-cad/: SKILL.md
skills/text-to-cad/references/: build123d-patterns.md  cad-viewer.md
skills/text-to-cad/scripts/: cad_viewer.sh
skills/text-to-firmware/: SKILL.md
skills/text-to-pcb/: SKILL.md
skills/text-to-pcb/references/: design-rules.md  fab-and-3d.md  pcb-viewing.md  spec-template.md
skills/text-to-pcb/scripts/: fab_export.sh  pcb_check.sh
skills/vibe-cad/: SKILL.md
skills/vibe-cad/references/: cad-viewer.md  usb-connector-cutouts.md
skills/vibe-cad/scripts/: cad_viewer.sh
skills/vibe-firmware/: SKILL.md
skills/vibe-firmware/references/: bringup-gotchas.md  esp-idf-structure.md  host-ui-simulation.md
skills/vibe-pcb/: SKILL.md
skills/vibe-pcb/references/: autorouting.md  design-rules.md  fab-and-3d.md  gated-workflow.md  pcb-viewing.md  professional-standards.md  spec-template.md
skills/vibe-plm/: SKILL.md
tools/codesign-viewer/: README.md  codesign-viewer.sh
(+28 files in other folders)
